fix: don't need extra spacing between dropdown and base fields pills

--- a/packages/salesforcedx-vscode-soql/src/soql-builder-ui/modules/querybuilder/fields/fields.css
+++ b/packages/salesforcedx-vscode-soql/src/soql-builder-ui/modules/querybuilder/fields/fields.css
@@ -37,10 +37,6 @@ select[multiple] {
   font-weight: bold;
 }
 
-.pills-gap {
-  padding-top: 5px;
-}
-
 .relationship-pill-group {
   border: 1px solid var(--vscode-list-inactiveSelectionBackground, var(--soql-color-light-grey));
   border-radius: 3px;
